# choreographer

./: .gitignore  Building.md  CODE_OF_CONDUCT.md  Cargo.toml  Choreographer.csproj  Choreographer.sln  Design.md  README.md  choreo.ron  choreographer.gdextension  icon.png.import  project.godot  run_shared.sh  scons_log.txt  test.cho
.github/workflows/: auto_release_main_branch.yml  rust_checks.yaml
addons/choreographer/: Plugin.cs  plugin.cfg
assets/: choreographer_logo_v1.png.import  choreographer_logo_v1.svg.import
cho-cdylib/: Cargo.toml
cho-lib/: Cargo.toml
cho-lib/src/: filetype.rs  lib.rs  logger.rs  nodes.rs  scripts.rs  types.rs
cho-lib/src/stdlib/: console.rs  control.rs  math.rs  mod.rs  vars.rs
cho-runtime/: Cargo.toml
cho-runtime/src/: exec.rs  main.rs  project.rs
demo/: MainScene.tscn  VisualScript_Test.vs  project.godot  test_script.c11r
demo/benchmark/: new_script.c11r  new_script.gd  test_script.c11r
demo/modularity_tests/: test_blockpack.tres  test_custom_block.gd
demo/testing/: ResourceSavingTest.tscn
demo/workshop/: C11R Editor Design.gd  C11R Editor Design.tscn
modules/c11r/: C11RLang.cpp  C11RLang.hpp  GraphLang.cpp  GraphLang.hpp  GraphLang.os  SCsub  c11r_lang.cpp  c11r_lang.hpp  config.py  register_types.cpp  register_types.h  register_types.os
src/: __blocks.rs  __blocks.txt  __lang.rs  __lang.txt  blocks.rs  common.rs  lang.rs  lib.rs
src/editor/: c11r_plugin.rs  editor_gui.rs  mod.rs
src/lang/: core_blocks.rs  core_lang.rs  core_resource.rs  mod.rs
src/scene/: mod.rs  (+1 more)
test/: test_node.cs  test_node.tscn
(+48 files in other folders)
