[package]
name = "choreographer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
# using rev against a very specific commit hash allows us to maintain stability through CI checks and build automation
godot = { git = "https://github.com/godot-rust/gdext", rev = "77e3b95" }