[package]
name = "cho-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colog = "1.3.0"
log = "0.4.22"
ron = "0.8.1"
serde = { version = "1.0.214", features = ["derive"] }

[features]
default = ["stdlib", "logging"]

# Optionally discard basic node implementations. 
# Ideally this is done to register a custom base library of nodes. 
# Since scripting cannot be done without base nodes to composite
stdlib = []
logging = []
